--- a/podcastrnext/src/components/player/styles.module.scss
+++ b/podcastrnext/src/components/player/styles.module.scss
@@ -25,7 +25,7 @@
     footer{
         align-self: stretch;
 
-        &.empty{
+        &.empty .progress{
             opacity: 0.5;
         }
 
@@ -73,6 +73,8 @@
     align-items: center;
     justify-content: center;
 
+   
+
 }
 
 .progress {
@@ -83,7 +85,7 @@
 
     span{
         display: inline-block;
-        width: 4rem;
+        width: 5rem;
         text-align: center;
     }
 
@@ -115,10 +117,19 @@
 
         &:disabled{
             cursor: default;
+            opacity: 0.5;
         }
 
         &:hover:not(:disabled){
             filter: brightness(0.8);
+        }
+
+        &.isActive{
+            filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
+        }
+
+        &.isActive:hover{
+            filter: brightness(0.6) invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);   
         }
 
         &.playButton{
